// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem Test > Snapshot > Active 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 20px;
  max-width: 20px;
  margin-right: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  padding: 0 6px;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  overflow: hidden;
  border-radius: 6px;
  color: #5E56F0;
  background-color: #5E56F01A;
}

<a
  class="c0"
  data-testid="bezier-react-nav-item"
  role="menuitem"
  target="_self"
>
  <div
    class="c1"
  >
    <svg
      class="Icon margin"
      data-testid="bezier-react-nav-item-left-icon"
      fill="none"
      height="20"
      style="--b-icon-color: var(--bgtxt-blue-normal);"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="Text typo-14 truncated margin"
    data-testid="bezier-react-text"
  >
    test-content
  </span>
</a>
`;

exports[`NavItem Test > Snapshot > Not active 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 20px;
  max-width: 20px;
  margin-right: 8px;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 28px;
  padding: 0 6px;
  -webkit-text-decoration: none;
  text-decoration: none;
  outline: 0;
  overflow: hidden;
  border-radius: 6px;
  color: #000000D9;
}

.c0:hover {
  background-color: #0000000D;
}

.c0:focus-visible {
  background-color: #0000000D;
}

<a
  class="c0"
  data-testid="bezier-react-nav-item"
  role="menuitem"
  target="_self"
>
  <div
    class="c1"
  >
    <svg
      class="Icon margin"
      data-testid="bezier-react-nav-item-left-icon"
      fill="none"
      height="20"
      style="--b-icon-color: var(--txt-black-dark);"
      viewBox="0 0 24 24"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M17 12a5 5 0 1 1-10 0 5 5 0 0 1 10 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </div>
  <span
    class="Text typo-14 truncated margin"
    data-testid="bezier-react-text"
  >
    test-content
  </span>
</a>
`;
